<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/amountView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chiaro"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/editAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/chiaro"
                android:hint="@string/enter_amount"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/paxView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chiaro"
                android:text="@string/num_of_pax" />

            <EditText
                android:id="@+id/editPax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/chiaro"
                android:hint="@string/enter_pax"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/svsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/chiaro"
                android:text="@string/no_svs"
                android:textOff="SVS exc."
                android:textOn="SVS inc." />

            <ToggleButton
                android:id="@+id/gstButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/chiaro"
                android:textOff="@string/gst_exc"
                android:textOn="@string/gst_inc" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/discountView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chiaro"
            android:text="@string/discount" />

        <EditText
            android:id="@+id/editDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/chiaro"
            android:hint="@string/enter_discount"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioGroup
            android:id="@+id/rgPaymentMethod"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cashRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chiaro"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/paynowRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chiaro"
                android:text="@string/paynow" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/splitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/chiaro"
            android:text="@string/split" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/chiaro"
            android:text="@string/reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/totalBillView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chiaro"
            android:text="@string/total_bill"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eachPaysView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chiaro"
            android:text="@string/each_pays"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>